@@ -1,3 +1,7 @@
+2006-09-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* added popupmenu to operationslist and did some (higrelated) cleanups
+
 2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/TreeView_Detail.h,
